# mm-iot-esp32

./: VERSION.md
examples/iperf/main/: CMakeLists.txt
examples/iperf/main/src/: mm_app_common.c  mm_app_loadconfig.c
examples/rf-test/main/: CMakeLists.txt
examples/rf-test/main/src/: rf-test.c
examples/scan/main/: CMakeLists.txt
examples/scan/main/src/: mm_app_regdb.c  scan.c
examples/sta_connect/main/: CMakeLists.txt
examples/sta_connect/main/src/: sta_connect.c
examples/sta_reboot/main/: CMakeLists.txt
examples/sta_reboot/main/src/: mm_app_regdb.c  sta_reboot.c
examples/transfer_reset/main/: CMakeLists.txt
examples/transfer_reset/main/src/: mm_app_common.c  mm_app_loadconfig.c
framework/: Pipfile
framework/doc/html/: GETTING_STARTED.html  MMAPPS.html  MMPLATFORMS.html  MM_EKH08_ESP32S3.html  annotated.html  annotated_dup.js  classes.html  deprecated.html  dir_022c92c61385e284b387f088f94448a5.html  dir_075b16163f3f6ee440f4ef0c7840e34e.html  dir_075b16163f3f6ee440f4ef0c7840e34e.js  dir_075b16163f3f6ee440f4ef0c7840e34e_dep.map  dir_075b16163f3f6ee440f4ef0c7840e34e_dep.md5  dir_0fb5ed61d46a97e5f052c556fcdc6c28.html  dir_0fb5ed61d46a97e5f052c556fcdc6c28.js  dir_0fb5ed61d46a97e5f052c556fcdc6c28_dep.map  dir_0fb5ed61d46a97e5f052c556fcdc6c28_dep.md5  dir_23e5caa050597a69d3ef261598c3167d.html  dir_23e5caa050597a69d3ef261598c3167d.js  dir_23e5caa050597a69d3ef261598c3167d_dep.map  dir_23e5caa050597a69d3ef261598c3167d_dep.md5  dir_2f48d788a2f5ed473d20741c85122cba.html  dir_2f48d788a2f5ed473d20741c85122cba.js  dir_2f48d788a2f5ed473d20741c85122cba_dep.map  dir_2f48d788a2f5ed473d20741c85122cba_dep.md5  dir_3854887db24d4426c012e0a37878996f.html  dir_3854887db24d4426c012e0a37878996f.js  dir_3854887db24d4426c012e0a37878996f_dep.map  dir_3854887db24d4426c012e0a37878996f_dep.md5  dir_42da561fe3c2bbe8063d121a754d62d7.html  dir_42da561fe3c2bbe8063d121a754d62d7.js  dir_42da561fe3c2bbe8063d121a754d62d7_dep.map  dir_42da561fe3c2bbe8063d121a754d62d7_dep.md5  dir_46d9fa89a5346e613d410ac44f359658.html  dir_46d9fa89a5346e613d410ac44f359658.js  dir_46d9fa89a5346e613d410ac44f359658_dep.map  dir_46d9fa89a5346e613d410ac44f359658_dep.md5  dir_6dca21a3fcecd8b0ec3e16267067d634.html  dir_7b47cca4d318623bb4270ab1fb592ef5.html  dir_7ddb6008802f97e4d87f827219873a7c.html  (+214 more)
framework/doc/html/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_6.js  all_9.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  enums_1.js  enumvalues_1.js  functions_0.js  groups_6.js  searchdata.js  typedefs_0.js  variables_0.js  (+10 more)
framework/mm_shims/: CMakeLists.txt  Kconfig  idf_component.yml
framework/morsefirmware/: bcf_aw_hm593.mbin  bcf_aw_hm593_4v3.mbin  bcf_mf03120.mbin  bcf_mf08251.mbin  bcf_mf08551.mbin  bcf_mf08651_us.mbin  mm6108.mbin
framework/morselib/: idf_component.yml
framework/morselib/include/: mmhal_wlan.h  mmwlan.h
framework/src/mmipal/: idf_component.yml
framework/src/mmiperf/: idf_component.yml
framework/src/mmpktmem/: idf_component.yml  mmpktmem_static.c
framework/src/mmutils/: idf_component.yml
framework/src/slip/: idf_component.yml
